add: more java + formatter file + license

--- a/Java/Temas-2-a-5/.project
+++ b/Java/Temas-2-a-5/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Tema_2</name>
+	<name>Temas-2-a-5</name>
 	<comment></comment>
 	<projects>
 	</projects>
